# MolarTracker

./: .clang-format  .clang-tidy  .clangd  .cppcheck  .gitignore  .gitmodules  .iwyu.imp  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEV-CHANGELOG.md  Dockerfile  devops.toml  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app_config.cpp  app_config.hpp  app_context.cpp  app_context.hpp  repo_container.cpp  repo_container.hpp  service_container.cpp  service_container.hpp  store_container.cpp  store_container.hpp
src/app/domain/: CMakeLists.txt  profile.cpp  profile.hpp
src/app/factories/: CMakeLists.txt  account_factory.cpp  account_factory.hpp  profile_factory.cpp
src/app/repos/: CMakeLists.txt  account_repo.cpp  account_repo.hpp  profile_repo.cpp  profile_repo.hpp  repo_errors.cpp
src/app/repos_api/: CMakeLists.txt  i_account_repo.hpp  i_profile_repo.hpp  i_repo.hpp
src/app/services/: CMakeLists.txt  account_service.cpp  account_service.hpp  profile_service.cpp  profile_service.hpp
src/app/services_api/: CMakeLists.txt  i_account_service.hpp  i_profile_service.hpp
src/app/store/: CMakeLists.txt  account_store.cpp  account_store.hpp  i_store.cpp  i_store.hpp  profile_store.cpp  profile_store.hpp  subscription.hpp
src/commands/: CMakeLists.txt
src/config/: CMakeLists.txt  constants.cpp  constants.hpp  finance_enums.hpp  id_types.hpp  id_types.tpp  json.hpp  logging_base.hpp  signal_tags.hpp  strong_id.hpp  strong_id.tpp
src/connections/: CMakeLists.txt  connection.cpp  connection.hpp  observable.hpp  observable.tpp  signal.hpp  signal.tpp  signal_exception.cpp  signal_exception.hpp
src/controller/: CMakeLists.txt  account_controller.cpp  account_controller.hpp  ensure_profile_controller.cpp  ensure_profile_controller.hpp  main_controller.cpp  main_controller.hpp  side_bar_category_controller.hpp  side_bar_controller.cpp  side_bar_controller.hpp
src/controller/handlers/: CMakeLists.txt  dirty_handler.cpp  dirty_handler.hpp  handlers.hpp  logging_handler.cpp  logging_handler.hpp
src/controller/menu_bar/: debug_menu_controller.cpp  debug_menu_controller.hpp  edit_menu_controller.cpp  edit_menu_controller.hpp  file_menu_controller.cpp  file_menu_controller.hpp  help_menu_controller.cpp  help_menu_controller.hpp  menu_bar_controller.cpp  menu_bar_controller.hpp  settings_menu_controller.cpp  settings_menu_controller.hpp
src/db/: CMakeLists.txt  database.cpp  database.hpp  db_exception.cpp  db_exception.hpp  statement.cpp  statement.hpp  transaction.cpp  transaction.hpp
src/drafts/: CMakeLists.txt  account_draft.hpp  profile_draft.hpp
src/exceptions/: CMakeLists.txt  base.cpp  base.hpp  file_exceptions.cpp  file_exceptions.hpp
src/filter/: CMakeLists.txt
src/finance/: CMakeLists.txt  cash.cpp  cash.hpp  cash_account.cpp  cash_account.hpp  cash_transaction.cpp  cash_transaction.hpp  currency.hpp  currency_exception.cpp  currency_exception.hpp  transaction.cpp  transaction.hpp  transaction_entry.hpp
src/http/: CMakeLists.txt
src/infra/: CMakeLists.txt  database.cpp  database.hpp
src/json/: CMakeLists.txt  optional.hpp  traits.hpp
src/logging/: CMakeLists.txt  log_categories.cpp  log_categories.hpp  log_categories.tpp  log_category.cpp  log_category.hpp  log_category_registry.cpp  log_category_registry.hpp  log_entry_scope.cpp  log_entry_scope.hpp  log_macros.hpp  log_manager.cpp  log_manager.hpp  log_manager_private.cpp  log_object.cpp  log_object.hpp  log_stream.hpp  logging.hpp  logging_base.hpp  loglevel.hpp
src/orm/: CMakeLists.txt  binder.hpp  binder.tpp  concepts.hpp  constraints.hpp  crud.hpp  field.hpp  field.tpp  field_view.cpp  field_view.hpp  field_view.tpp  fields.hpp  fields.tpp  fields_detail.hpp  fields_detail.tpp  fixed_string.cpp  fixed_string.hpp  fixed_string.tpp  join.cpp  join.hpp  model_concept.hpp  orm_exception.cpp  orm_exception.hpp  sql_type.hpp  type_traits.hpp  where_clause.cpp  where_clause.hpp  where_clause.tpp
src/orm/crud/: CMakeLists.txt  create.hpp  crud_detail.hpp  crud_detail.tpp  crud_error.cpp  crud_error.hpp  delete.hpp  get.hpp  insert.hpp  update.hpp
src/settings/: CMakeLists.txt  debug_slots_settings.cpp  debug_slots_settings.hpp  enum_param.hpp  enum_param.tpp  general_settings.cpp  general_settings.hpp  general_settings.tpp  log_viewer_settings.cpp  log_viewer_settings.hpp  log_viewer_settings.tpp  logging_settings.cpp  logging_settings.hpp  logging_settings.tpp  numeric_param.hpp  numeric_param.tpp  param_container.hpp  param_core.hpp  param_core.tpp  param_error.cpp  param_mixin.hpp  param_utils.hpp  params_core.hpp  params_core.tpp  params_mixin.hpp  params_mixin.tpp  profile_ui_settings.cpp  profile_ui_settings.hpp  settings.cpp  settings.hpp  ui_settings.cpp  ui_settings.hpp  ui_settings.tpp  version_param.hpp
src/settings/params/: CMakeLists.txt  bool_param.hpp  enum_param.hpp  enum_param.tpp  numeric_param.hpp  numeric_param.tpp  numeric_vec_param.hpp  numeric_vec_param.tpp  param_container.cpp  param_container.hpp  param_container_mixin.hpp  param_container_mixin.tpp  param_core.hpp  param_core.tpp  param_error.cpp  (+13 more)
src/sql_models/: CMakeLists.txt  account_row.hpp  account_row.impl.hpp  cash_account_row.hpp  cash_account_row.impl.hpp  cash_row.hpp  cash_row.impl.hpp  instrument_row.hpp  instrument_row.impl.hpp  profile_row.cpp  profile_row.hpp  profile_row.impl.hpp  transaction_entry_row.hpp  transaction_row.hpp  transaction_row.impl.hpp
src/ui/: CMakeLists.txt  application.cpp  application.hpp  main_window.cpp  main_window.hpp  top_menu_bar.cpp  top_menu_bar.hpp
src/utils/: CMakeLists.txt  check_updates.hpp  git.hpp  paths.cpp  paths.hpp  qt_helpers.cpp  qt_helpers.hpp  qt_helpers.tpp  ring_file.cpp  ring_file.hpp  ring_file_config.hpp  string.cpp  string.hpp  timestamp.cpp  timestamp.hpp  version.cpp  version.hpp
tests/: CMakeLists.txt
tests/db/: CMakeLists.txt  test_database.cpp  test_statement.cpp  test_statement.hpp  test_transaction.cpp
tests/orm/: CMakeLists.txt  test_binder.cpp
tests/utils/: CMakeLists.txt  test_paths.cpp  test_version.cpp
(+689 files in other folders)
